RESOLVED FIXED162918
[GStreamer][EME] ClearKey decryption support
https://bugs.webkit.org/show_bug.cgi?id=162918
Summary [GStreamer][EME] ClearKey decryption support
Enrique Ocaña
Reported 2016-10-04 10:29:01 PDT
Add ClearKey encryption subclass.
Attachments
Patch (15.71 KB, patch)
2016-10-04 10:35 PDT, Enrique Ocaña
no flags
Patch (15.57 KB, patch)
2016-10-16 12:12 PDT, Enrique Ocaña
no flags
Patch (15.58 KB, patch)
2016-10-26 01:23 PDT, Enrique Ocaña
no flags
Enrique Ocaña
Comment 1 2016-10-04 10:35:22 PDT
Enrique Ocaña
Comment 2 2016-10-04 10:37:05 PDT
Comment on attachment 290613 [details] Patch Wait until all the patches in 157314 are ready.
Enrique Ocaña
Comment 3 2016-10-04 10:37:26 PDT
The style failures are on purpose, because of gobject macro machinery requirements.
WebKit Commit Bot
Comment 4 2016-10-04 10:37:29 PDT
Attachment 290613 [details] did not pass style-queue: ERROR: Source/WebCore/platform/graphics/gstreamer/eme/WebKitClearKeyDecryptorGStreamer.h:41: webkit_media_clear_key_decrypt_get_type is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] ERROR: Source/WebCore/platform/graphics/gstreamer/eme/WebKitClearKeyDecryptorGStreamer.cpp:66: webkit_media_clear_key_decrypt_class_init is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] ERROR: Source/WebCore/platform/graphics/gstreamer/eme/WebKitClearKeyDecryptorGStreamer.cpp:96: webkit_media_clear_key_decrypt_init is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] Total errors found: 3 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
Xabier Rodríguez Calvar
Comment 5 2016-10-08 09:05:50 PDT
Comment on attachment 290613 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=290613&action=review > Source/WebCore/platform/graphics/gstreamer/eme/WebKitClearKeyDecryptorGStreamer.cpp:70 > + WebKitMediaCommonEncryptionDecryptClass* cencClass = WEBKIT_MEDIA_CENC_DECRYPT_CLASS(klass); > + GstElementClass* elementClass = GST_ELEMENT_CLASS(klass); > + GObjectClass* gobjectClass = G_OBJECT_CLASS(klass); You can move this to the latest place before they are used. > Source/WebCore/platform/graphics/gstreamer/eme/WebKitClearKeyDecryptorGStreamer.cpp:188 > + WebKitMediaClearKeyDecryptPrivate* priv = WEBKIT_MEDIA_CK_DECRYPT_GET_PRIVATE(WEBKIT_MEDIA_CK_DECRYPT(self)); > + GstMapInfo map, ivMap, subSamplesMap; > + unsigned position = 0; > + unsigned sampleIndex = 0; > + uint8_t ctr[CLEARKEY_SIZE]; > + GstByteReader* reader = nullptr; > + gboolean bufferMapped, subsamplesBufferMapped; > + gcry_error_t error; Move these to the latest place where they are first used. reader should be GRefPtr
Enrique Ocaña
Comment 6 2016-10-16 12:12:25 PDT
WebKit Commit Bot
Comment 7 2016-10-16 12:15:24 PDT
Attachment 291771 [details] did not pass style-queue: ERROR: Source/WebCore/platform/graphics/gstreamer/eme/WebKitClearKeyDecryptorGStreamer.h:40: webkit_media_clear_key_decrypt_get_type is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] ERROR: Source/WebCore/platform/graphics/gstreamer/eme/WebKitClearKeyDecryptorGStreamer.cpp:66: webkit_media_clear_key_decrypt_class_init is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] ERROR: Source/WebCore/platform/graphics/gstreamer/eme/WebKitClearKeyDecryptorGStreamer.cpp:95: webkit_media_clear_key_decrypt_init is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] Total errors found: 3 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
Enrique Ocaña
Comment 8 2016-10-26 01:23:51 PDT
WebKit Commit Bot
Comment 9 2016-10-26 01:30:19 PDT
Attachment 292901 [details] did not pass style-queue: ERROR: Source/WebCore/platform/graphics/gstreamer/eme/WebKitClearKeyDecryptorGStreamer.h:40: webkit_media_clear_key_decrypt_get_type is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] ERROR: Source/WebCore/platform/graphics/gstreamer/eme/WebKitClearKeyDecryptorGStreamer.cpp:66: webkit_media_clear_key_decrypt_class_init is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] ERROR: Source/WebCore/platform/graphics/gstreamer/eme/WebKitClearKeyDecryptorGStreamer.cpp:95: webkit_media_clear_key_decrypt_init is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] Total errors found: 3 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
Enrique Ocaña
Comment 10 2016-10-26 01:49:26 PDT
Comment on attachment 292901 [details] Patch Clearing flags on attachment: 292901 Committed r207888: <http://trac.webkit.org/changeset/207888>
Enrique Ocaña
Comment 11 2016-10-26 01:49:34 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.