[GStreamer][EME] ClearKey decryption support https://bugs.webkit.org/show_bug.cgi?id=162918

Reviewed by Xabier Rodriguez-Calvar.

This patch is authored by Philippe Normand <philn@igalia.com>.

* platform/graphics/gstreamer/eme/WebKitClearKeyDecryptorGStreamer.cpp: Added.
(webkit_media_clear_key_decrypt_class_init):
(webkit_media_clear_key_decrypt_init):
(webKitMediaClearKeyDecryptorFinalize):
(webKitMediaClearKeyDecryptorRequestDecryptionKey):
(webKitMediaClearKeyDecryptorHandleKeyResponse):
(webKitMediaClearKeyDecryptorSetupCipher):
(webKitMediaClearKeyDecryptorDecrypt):
(webKitMediaClearKeyDecryptorReleaseCipher):
* platform/graphics/gstreamer/eme/WebKitClearKeyDecryptorGStreamer.h: Added.

Canonical link: https://commits.webkit.org/181742@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@207888 268f45cc-cd09-0410-ab3c-d52691b4dbfc